--- a/app/views/rates/rate.html.erb
+++ b/app/views/rates/rate.html.erb
@@ -1,13 +1,11 @@
 <div class="banner-rate" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1561131668-f63504fc549d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=857&q=80);">
-  <div class="container-rate">
-  </div>
+        <h1>You choose how to fly!</h1>
+        <h5>Learn about the benefits of each of our rates</h5>
 </div>
-<div class="main_container">
+
   <div class="container-rate">
     <div class="baggage">
         <%= image_tag "BeneficiosTexto.png", alt: "Beneficios" %>
-        <h2>You choose how to fly!</h2>
-        <p>Learn about the benefits of each of our rates</p>
     </div>
   </div>
 
@@ -249,4 +247,3 @@
       </ul>
     </div>
   </div>
-</div>
