--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
       </li>
       <% if user_signed_in? %>
       <li class="nav-item">
-        <span class="navbar-text"><%= current_user.name %> <%= current_user.last_name %> </span>
+        <span class="navbar-text"><%= current_user.name.capitalize %> <%= current_user.last_name.capitalize %> </span>
       </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
