--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -10,3 +10,10 @@
     // font-weight: 800;
     font-size: 19px;
 }
+
+.note-booking {
+  font-size: 12px;
+  color: #b1afaf;
+  font-family: cursive;
+  text-align: right;
+}
