Mejorando lista de bookings

--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -1,5 +1,24 @@
 .booking-title {
     font-size: 18px;
+    text-align: end;
+}
+
+.booking-title-left {
+  font-size: 18px;
+  text-align: left;
+}
+
+p {
+  margin-bottom: 0;
+}
+
+h5 {
+  margin-bottom: 0;
+}
+
+.booking-small {
+  font-size: 14px;
+  color: gray;
 }
 
 .booking-rate {
