--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -5,7 +5,6 @@
 
 .booking-title-left {
   font-size: 18px;
-  text-align: left;
 }
 
 p {
@@ -33,6 +32,6 @@ h5 {
 .note-booking {
   font-size: 12px;
   color: #b1afaf;
-  font-family: cursive;
-  text-align: right;
+  font-style: italic;
+  text-align: left;
 }
