--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,11 +1,15 @@
 <div class="main_container">
-  <h1>Edita tu reserva</h1>
+  <div class="mx-auto py-3 container col-6">
+  <h2 class='text-center'>Edita tu reserva</h2>
   <p>Ingresa los datos que vas a modificar</p>
   <%= simple_form_for [@booking] do |f| %>
       <%= f.input :fec_ini, as: :string, required: false, label: "Fecha de salida", input_html: {class: "datepicker"} %>
       <%= f.input :fec_end, as: :string, required: false, label: "Fecha de retorno", input_html: {class: "datepicker"} %>
-      <%= f.submit "Editar fechas", class: "btn btn-primary" %>
+      <%= f.submit "Editar fechas", class: "btn btn-danger" %>
     <% end %>
   <br>
+  <p class="note-booking">Realizar una modificación en la fecha de reserva tiene una Penalización del 10% del costo total de los pasajes, sin incluir el costo de la tarifa de vuelo.</p>
+  <br>
   <%= link_to "Volver", bookings_path %>
+</div>
 </div>
